compilerArgs block added